@@ -47,3 +47,6 @@
 2016-01-12 Fred Gleason <fredg@paravelsystems.com>
 	* Changed the default audio device type from STDOUT to ALSA in
 	'src/glassplayer/glassplayer.cpp'.
+2016-01-12 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented channel remixing in the ALSA driver in
+	'src/glassplayer/dev_alsa.cpp'.
